# esp-printer

./: CMakeLists.txt  LICENSE  platformio.ini
_old/: Bounds.h  Display.cpp  Display.h  Joystick.cpp  Joystick.h  Menu.h  Widget.h  configuration.h  main.cpp
include/: Display.h  DisplayString.h  IClass.h  Joystick.h  Menu.h  Page.h  Singleton.h  config.h  configuration.h
include/Page/: MainPage.h  PageInterface.h
include/UI/: Drawable.h  Text.h
include/menu/: About.h  MenuPoint.h
include/pages/: HomePage.h  Menu.h  Settings.h
old/old/: Display.cpp  Display.h  DisplayString.cpp  DisplayString.h  Menu.h  Singleton.cpp  main.cpp
old/old/menu/: About.h  MainMenu.cpp  MainMenu.h  Menu.cpp  MenuList.h  MenuPoint.cpp  MenuPoint.h
src/: Display.cpp  DisplayString.cpp  Joystick.cpp  Page.cpp  Singleton.cpp  main.cpp
src/UI/: Text.cpp
src/menu/: About.cpp  Menu.cpp
src/pages/: HomePage.cpp  Menu.cpp  Settings.cpp
